# LensGPT

./: .gitignore  README.md
lensgpt/: pyproject.toml
lensgpt/src/lensgpt/: __init__.py  utils.py
vite-project/: .gitignore  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
vite-project/api/: api.py  model.py  utils.py
vite-project/src/: App.css  App.tsx
vite-project/src/components/: chat.tsx  info.tsx  layerSelection.tsx  message.tsx  textbox.tsx  types.ts
vite-project/tests/: test_utils.py
