[project]
name = "lensgpt"
version = "0.1.0"
description = "Backend library for the LensGPT project"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.0",
    "fastapi>=0.109.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lensgpt"]
